# guard-agent

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-28-guard-agent-mvp.md
docs/superpowers/specs/: 2026-05-28-guard-agent-design.md
src/: main.py
src/agents/: decision.py  diagnosis.py  supervisor.py
src/knowledge/: fault_patterns.json  fault_patterns.py
src/models/: alert.py  decision.py  diagnosis.py
src/safety/: operation_levels.py
src/tools/: diagnostic.py  mock_data.py
src/utils/: llm.py  logging.py
tests/: test_decision_agent.py  test_diagnosis_agent.py  test_diagnostic_tools.py  test_fault_patterns.py  test_integration.py  test_llm.py  test_operation_levels.py  test_supervisor.py
tests/fixtures/: config_change.json  connection_pool.json  oom.json
